# researchloop

./: .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  mkdocs.yml  pyproject.toml  researchloop.toml.example  slack-app-manifest.yml
.github/workflows/: ci.yml  docs.yml
docs/: cli.md  configuration.md  dashboard.md  deployment.md  development.md  getting-started.md  index.md  security.md  slack.md
researchloop/: cli.py
researchloop/clusters/: ssh.py
researchloop/comms/: base.py  conversation.py  ntfy.py  router.py  slack.py
researchloop/core/: config.py  credentials.py  models.py  orchestrator.py
researchloop/dashboard/: auth.py  routes.py
researchloop/dashboard/templates/: base.html  login.html  loop_detail.html  loops.html  search.html  sprint_detail.html  sprints.html  (+4 more)
researchloop/db/: migrations.py  queries.py
researchloop/runner/: claude.py  main.py  pipeline.py  upload.py
researchloop/schedulers/: __init__.py  sge.py  slurm.py
researchloop/sprints/: auto_loop.py  manager.py
researchloop/studies/: manager.py
researchloop/testing/: __init__.py  slack_mock.py  slack_simulator.py
tests/: conftest.py  test_api.py  test_auto_loop.py  test_cli.py  test_config.py  test_dashboard.py  test_database.py  test_notification.py  test_queries.py  test_runner.py  test_schedulers.py  test_search.py  test_sge.py  test_slack.py  test_slack_events.py  test_slack_mock.py  test_slack_simulator.py  test_sprint_manager.py  test_study_manager.py  test_tweaks.py
tests/integration/: conftest.py  test_loop_advancement.py  test_webhook_and_refresh.py
(+15 files in other folders)
